--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-# microsoft-insanity-explorer
-
+-------------------------------
+| microsoft-insanity-explorer |
+-------------------------------
 
 # microsoft windows
 https://en.wikipedia.org/wiki/Microsoft_Windows
