--- a/README
+++ b/README
@@ -1,6 +1,7 @@
--------------------------------
-| microsoft-insanity-explorer |
--------------------------------
+--------
+| MSIE |
+--------
+
 
 # microsoft windows
 https://en.wikipedia.org/wiki/Microsoft_Windows
